# Plugin3DE

./: CMakeLists.txt  CMakePresets.json  main.cpp
utility/: CMakeLists.txt  utility_plugin.cpp  utility_plugin.h
